Started customizing kitty

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -242,7 +242,7 @@ font_size 18.0
 
 #: Cursor customization {{{
 
-# cursor #cccccc
+ cursor #00FF00
 
 #: Default cursor color. If set to the special value none the cursor
 #: will be rendered with a "reverse video" effect. It's color will be
@@ -1079,7 +1079,7 @@ font_size 18.0
 
 #: The foreground and background colors.
 
-background_opacity 0.3
+background_opacity 1
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
@@ -1131,7 +1131,7 @@ background_opacity 0.3
 #: When background image is scaled, whether linear interpolation
 #: should be used.
 
-# dynamic_background_opacity no
+# dynamic_background_opacity yes
 
 #: Allow changing of the background_opacity dynamically, using either
 #: keyboard shortcuts (increase_background_opacity and
@@ -2079,6 +2079,7 @@ background_opacity 0.3
 #:     map ctrl+t new_tab !neighbor [optional cmd to run]
 #: }}}
 
+#
 #: Layout management {{{
 
 #: Next layout
@@ -2102,6 +2103,8 @@ background_opacity 0.3
 
 #:     map ctrl+alt+z toggle_layout stack
 #: }}}
+
+
 
 #: Font sizes {{{
 
@@ -2138,6 +2141,7 @@ background_opacity 0.3
 #: size::
 
 #:     map kitty_mod+f6 change_font_size current 10.0
+
 #: }}}
 
 #: Select and act on visible text {{{
@@ -2399,12 +2403,16 @@ background_opacity 0.3
 
 #: }}}
 
+
 #: }}}
 
 
 
 
+
+
+
 # BEGIN_KITTY_THEME
-# Urple
-include current-theme.conf
+# GitHub Dark High Contrast
+# include current-theme.conf
 # END_KITTY_THEME
