Added shortcut to switch waybar profile

--- a/Terminals/kitty/kitty.conf
+++ b/Terminals/kitty/kitty.conf
@@ -241,8 +241,7 @@ font_size 18.0
 #: }}}
 
 #: Cursor customization {{{
-
- cursor #00FF00
+# cursor #00FF00
 
 #: Default cursor color. If set to the special value none the cursor
 #: will be rendered with a "reverse video" effect. It's color will be
@@ -1079,7 +1078,7 @@ font_size 18.0
 
 #: The foreground and background colors.
 
-background_opacity 0.4
+background_opacity 1
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
@@ -2413,6 +2412,6 @@ background_opacity 0.4
 
 
 # BEGIN_KITTY_THEME
-# GitHub Dark High Contrast
-# include current-theme.conf
+# Tokyo Night
+include current-theme.conf
 # END_KITTY_THEME
