--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,10 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-# font_family      monospace
-# bold_font        auto
-# italic_font      auto
-# bold_italic_font auto
+ font_family      BigBlueTermPlus Nerd Font 
+ bold_font        BigBlueTermPlus Nerd Font
+ italic_font      BigBlueTermPlus Nerd Font
+ bold_italic_font BigBlueTermPlus Nerd Font
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -24,7 +24,7 @@
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 18.0
+font_size 24.0
 
 #: Font size (in pts)
 
@@ -1078,7 +1078,7 @@ font_size 18.0
 
 #: The foreground and background colors.
 
-background_opacity 0.4
+background_opacity 0.7
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
