--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -48,8 +48,8 @@ $menu = wofi --show drun
 # exec-once = $terminal
 # exec-once = nm-applet &
 exec-once = waybar
-
-
+exec-once = hyprpaper
+exec-once = hyprctl hyprpaper reload , /home/lich/walls/wallpaper2
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
@@ -189,7 +189,8 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Custom binds
 bind = $mainMod, F, fullscreen
 bind = $mainMod, L, exec, swaylock -c 000000
-
+# Wallpaper
+bind = $mainMod, W, exec, $HOME/scripts/wall.sh
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, Q, killactive,
