--- a/ghostty/config
+++ b/ghostty/config
@@ -1,4 +1,4 @@
 font-family = "BigBlueTerm437 Nerd Font Mono"
 font-size = 21
-theme = "GruvboxDarkHard"
+theme = "Hipster Green"
 cursor-style = block
